--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     </div>
     <div class="sale-img">
-        <img src="./sale-iamge.png" alt="sale image">
+        <img src="./images/sale-iamge.png" alt="sale image">
         <div class="sale-img_offer">
             <h2>Udemy Flash Sale! 24 Hours To Save. </h2>
             <p>Get The Top Courses Just 499.Just One Day To Save But a Lfe Time To Learn</p>
